# beryl3

./: .gitignore  .pylintrc  CLAUDE.md  DJANGO_EUROPE_DEPLOYMENT.md  LICENSE  README.md  analyze_datadump.py  beryl3_converter.py  convert_datadump_final.py  convert_with_images.py  discover_image_urls.py  fix_image_urls.py  fix_import_mappings.py  image_url_manager.py  pyproject.toml  test_email_queue.py
docker/: .env  (+1 more)
webapp/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  VERSION  cloudrun-qa.yaml  convert_datadump.py  docker-entrypoint.sh  fix_attrs_production.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  test_pixelcube.py  test_secrets_manager.py  theme-preview.html
webapp/core/: README_PIXELCUBE.md  __init__.py  apps.py  lucide.py  pixelcube.py  urls.py  user_extensions.py  views.py
webapp/core/templatetags/: attribute_tags.py  lucide_cached.py  markdown_tags.py  media_tags.py  pixelcube.py
webapp/core/tests/: test_lucide.py
webapp/docs/reports/: task065_README.md  task065_final_summary.md  task065_lucide_optimization.md  task065_performance_analysis.md  task065_performance_optimization.md  task065_static_icon_prerendering.md
webapp/src/: input-admin-new-theme.css  input-admin.css  input.css
webapp/static/css/: tailwind-admin.css  tailwind.css
webapp/static/js/: combobox.js
webapp/templates/: base.html  base_public.html  base_sys.html  index.html
webapp/templates/account/: account_inactive.html  confirm_email_verification_code.html  confirm_login_code.html  confirm_password_reset_code.html  confirm_phone_verification_code.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  password_set.html  signup.html  signup_closed.html  verification_sent.html  (+1 more)
webapp/web/: adapters.py  admin.py  allauth_forms.py  apps.py  context_processors.py  decorators.py  forms.py  import_processor.py  import_schema.py  import_validator.py  models.py  models_metrics.py  models_user_profile.py  signals.py  storage.py  urls.py  views.py
webapp/webapp/: logging_middleware.py  settings.py  urls.py
(+388 files in other folders)
