[project]
name = "beryl3-webapp"
version = "0.1.0"
description = "Beryl, collection management system. Web application"
authors = [
    { name = "Mateusz Dubiel", email = "mdubiel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "django-environ>=0.12.0",
    "psycopg2-binary>=2.9.10",
]

