[project]
name = "beryl3-webapp"
version = "0.1.0"
description = "Beryl, collection management system. Web application"
authors = [
    { name = "Mateusz Dubiel", email = "mdubiel@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "django>=5.2,<6.0",
    "django-allauth>=65.9.0",
    "django-browser-reload>=1.18.0",
    "django-environ>=0.12.0",
    "django-nanoid-field>=0.1.4",
    "django-widget-tweaks>=1.5.0",
    "lucide>=1.1.3",
    "psycopg2-binary>=2.9.10",
]

